# multilogue

./: .env_example  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/manual_testing/: facilitate.py
src/multilogue/: __init__.py  conversations.py  entities.py  participants.py
src/multilogue/discussion/: conversation.py  threads.py
src/multilogue/entities/: __init__.py  entities.py  humans.py  machines.py
src/multilogue/participants/: agnostic.py  antagonist.py  attendee.py  critic.py  facilitator.py  interlocutor.py  protagonist.py  skeptic.py
src/multilogue/resources/utterances/: septem_circumstantiae.json
src/multilogue/utilities/: __init__.py  chatgpt.py  exceptions.py  functions.py  githublog.py  oia_threads.py  openaia.py
tests/: test_chatgpt.py  test_entities.py
