[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "multilogue"
version = "0.0.3"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "Multilogue"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/multilogue/multilogue"
"Bug Tracker" = "https://github.com/multilogue/multilogue/issues"