[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "multilogue"
version = "0.1.0"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "Multilogue is a cooperative game of reasoning entities against their own ignorance, confusion and misunderstanding."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["multilogue", "multilectic", "conversation", "ai"]
dependencies = [
    "requests >= 2.30.0",
    "PyGithub >= 1.59.0",
    "urllib3 >= 2.0.4",
    "symposium >= 0.2.0",
    "grammateus >= 0.0.13",
]
[project.urls]
"Homepage" = "https://github.com/multilogue/multilogue"
"Bug Tracker" = "https://github.com/multilogue/multilogue/issues"